--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,24 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #9141ac;
+  --ifm-color-primary-dark: #833a9b;
+  --ifm-color-primary-darker: #7b3792;
+  --ifm-color-primary-darkest: #662d78;
+  --ifm-color-primary-light: #9e4abb;
+  --ifm-color-primary-lighter: #a353be;
+  --ifm-color-primary-lightest: #b16cc8;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+[data-theme="dark"] {
+  --ifm-color-primary: #5bd7d1;
+  --ifm-color-primary-dark: #42d1ca;
+  --ifm-color-primary-darker: #36cec7;
+  --ifm-color-primary-darkest: #2aaca6;
+  --ifm-color-primary-light: #74ddd8;
+  --ifm-color-primary-lighter: #80e0db;
+  --ifm-color-primary-lightest: #a5e9e6;
 }
